--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "parcel index.html"
   },
   "devDependencies": {
+    "normalize.css": "^8.0.1",
     "parcel-bundler": "^1.12.4",
     "prettier": "1.14.3",
     "sass": "^1.23.7",
